Fix bug with resizing on mobile.

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 #root {
   display: flex;
-   align-items: center;
-  justify-content: center; /* Centers horizontally */
+  align-items: center;
+  justify-content: center;
   max-width: 1280px;
   margin: 0 auto;
   text-align: center;
@@ -9,7 +9,6 @@
 
 .main {
   display: inline-flex;
-  /*height: 695px;*/
   width: 540px;
   flex-direction: column;
   justify-content: center;
@@ -17,7 +16,7 @@
   gap: 31px;
   flex-shrink: 0;
 }
-@media (max-width: 600px){
+@media (max-width: 600px) {
   .main {
     width: 343px;
     padding: 16px;
@@ -25,12 +24,6 @@
 }
 .battery-widget {
   width: 100%;
-  /*padding: 0px 32px;*/
-}
-@media (max-width: 600px) {
-  .battery-widget {
-    /*padding: 0px 16px;*/
-  }
 }
 .battery-widget-inside {
   display: flex;
@@ -38,7 +31,7 @@
   align-items: center;
   justify-content: space-between;
   height: 72px;
-  background-color: #18171F;
+  background-color: #18171f;
   box-sizing: border-box;
   margin-bottom: 32px;
 }
@@ -51,14 +44,14 @@
   width: 100%;
   display: flex;
   flex-direction: column;
-  background-color: #24232C;
+  background-color: #24232c;
   flex-shrink: 0;
   align-items: flex-start;
   padding: 32px;
   box-sizing: border-box;
 }
 
-@media (max-width: 600px){
+@media (max-width: 600px) {
   .main-card-container {
     height: 423px;
     padding: 16px;
@@ -77,12 +70,19 @@
   padding-right: 32px;
   flex-shrink: 0;
   align-items: center;
-  background-color: #24232C;
+  background-color: #24232c;
 }
+
 .fade-out {
   opacity: 1;
   transition: opacity 2s ease-out;
   animation: fadeOut 2s;
+}
+
+@media (max-width: 600px) {
+  .fade-out {
+    display: none;
+  }
 }
 
 @keyframes fadeOut {
